<resources>
    <string name="app_name">铁航专线</string>
    <string name="main_title">航空铁路专线</string>
    <string name="city">成都</string>
    <string name="copyright">Copyright @ 2017 All Rights Reserved</string>
    <string name="our_company">四川铁航信息技术有限公司</string>
    <string name="hint_home_address">设置家庭地址</string>
    <string name="hint_company_address">设置公司地址</string>
    <string name="hint_get_on_the_bus_address">请输入上车地址</string>
    <string name="hint_get_off_the_bus_address">请输入下车地址</string>
    <string name="hint_address">请输入地址</string>
    <string name="home">家</string>
    <string name="company">公司</string>
    <string name="no_track_data">未查询到轨迹</string>
    <string name="travel_cancel">取消行程</string>
    <string name="refund_Amount">退款金额</string>
    <string name="cancel_rules_hint">查看取消规则</string>
    <string name="determine_cancel">确定取消</string>
    <string name="penal_sum_hint">您的行程已取消，本次行程为有责取消</string>
    <string name="free_hint">您的行程已取消，本次爽约金由平台减免</string>
    <string name="cancel_travel_hint">请选择取消原因</string>
    <string name="cancel_travel_cost_hint_1">现在取消将会支付</string>
    <string name="cancel_travel_cost_hint_2">元作为爽约金</string>
    <string name="cancel_free">无责取消</string>
    <string name="cancel_penal_sum">有责取消</string>
    <string name="exit_hint">请确认是否退出登录？</string>
    <string name="hint">提示</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="contact_customer_service">联系客服</string>
    <string name="search">搜索</string>
    <string name="identification">认证</string>
    <string name="title_identification">实名认证</string>
    <string name="function_skip">跳过</string>
    <string name="hint_name">请输入姓名</string>
    <string name="hint_id_numeral">请输入身份证号</string>
    <string name="hint_id_numeral_rule">请输入合法的身份证号</string>
    <string name="personal_center">个人中心</string>
    <string name="message">消息</string>
    <string name="my_message">我的消息</string>
    <string name="setting">设置</string>
    <string name="trip">行程</string>
    <string name="payment">支付</string>
    <string name="go_to_pay">去支付</string>
    <string name="ali_pay_payment">支付宝支付</string>
    <string name="we_chat_Payment">微信支付</string>
    <string name="union_payment">银联支付</string>
    <string name="payment_amount">支付金额</string>
    <string name="payment_wait_time">支付剩余时间</string>
    <string name="order_information">订单信息</string>
    <string name="order_number">订单编号</string>
    <string name="passengers_telephone">乘客电话</string>
    <string name="flight_number">航班号</string>
    <string name="riding_time">乘车时间</string>
    <string name="get_on_the_bus_address">上车地址</string>
    <string name="get_off_the_bus_address">下车地址</string>
    <string name="need">需要</string>
    <string name="seats">个座位</string>
    <string name="setting_identification">实名认证</string>
    <string name="usual_address">常用地址</string>
    <string name="connect_us">联系我们</string>
    <string name="cancellation_account">退出登录</string>
    <string name="about_us">关于我们</string>
    <string name="about_us_title">版本V2.0新增功能</string>
    <string name="about_us_text">新增付费模式，随时查看订单状态，贴心提醒，为您提供优质服务</string>
    <string name="we_chat_cord">微信公众号</string>
    <string name="us_phone">028-86868686</string>
    <string name="unauthorized">未认证</string>
    <string name="authenticated">已认证</string>
    <string name="authenticated_filed">认证失败,请检查身份证号码和名字</string>
    <string name="authenticated_success">认证成功</string>
    <string name="final_payment">最终支付</string>
    <string name="anonymous_evaluation">匿名评价</string>
    <string name="estimate">评价</string>
    <string name="other_estimate">其他评价</string>
    <string name="money_unit">元</string>
    <string name="login_input_phone">请输入手机号</string>
    <string name="login_input_code">请输入短信验证码</string>
    <string name="login_code">获取验证码</string>
    <string name="login_btn">登录</string>
    <string name="login_no_userInfo">请输入手机号码</string>
    <string name="login_no_code">请输入验证码</string>
    <string name="login_no_client_id">网络无法连接,请检查网络</string>
    <string name="login_code_reset">s后重发</string>
    <string name="login_right_mobile">请输入正确的手机号</string>
    <string name="include_error_hint">数据获取失败</string>
    <string name="inlcude_error_info">请检查网络后点击重新加载</string>
    <string name="airport_off">请输入航班号,例如3U8881</string>
    <string name="airport_no">请输入航班号,例如3U8862</string>
    <string name="airport_time">请选择乘车时间</string>
    <string name="airport_address">请输入上车地址</string>
    <string name="airport_down_address">请输入下车地址</string>
    <string name="airport_airport">选择航站楼</string>
    <string name="airport_seat">需要1个座位数</string>
    <string name="airport_validate">输入身份证号或护照验证免费乘坐资格</string>
    <string name="airport_fly">请选择起飞时间</string>
    <string name="airport_cancel">取消</string>
    <string name="airport_affirm">确认</string>
    <string name="airport_fly_time">当地起飞时间</string>
    <string name="airport_city">请选择城市</string>
    <string name="airport_fly_time_select">请选择当地起飞时间</string>
    <string name="riding_time_select">请选择乘车时间</string>
    <string name="great_satisfaction">非常满意</string>
    <string name="please_point_out_insufficient">请指出不足...</string>
    <string name="airport_validate_text">验证</string>
    <string name="airport_validate_text_all">全部验证</string>
    <string name="airport_oneself">乘客本人</string>
    <string name="airport_arrive_time"></string>
    <string name="airport_price">元</string>
    <string name="airport_input_time">请选择乘车时间</string>
    <string name="airport_sc">目前只支持四川航空接送预约</string>
    <string name="airport_pickup_no_open">该城市暂未开通接机服务</string>
    <string name="airport_drop_off_no_open">该城市暂未开通送机服务</string>
    <string name="qr_code_hint">二维码请在上车时提供给司机扫描</string>
    <string name="order_qr_code">订单二维码</string>
    <string name="change_airport_pickup_city">请选择接机城市</string>
    <string name="change_airport_drop_off_city">请选择送机城市</string>
    <string-array name="great_satisfaction_reason_list">
        <item>车内整洁</item>
        <item>活地图，认路准</item>
        <item>驾驶平稳</item>
        <item>态度好，服务棒</item>
        <item>很有礼貌</item>
    </string-array>
    <string-array name="insufficient_reason_list">
        <item>服务态度恶劣</item>
        <item>等待时间久</item>
        <item>危险驾驶</item>
        <item>乘车时间久</item>
        <item>车太脏</item>
        <item>道路不熟悉</item>
    </string-array>
    <string-array name="cancel_reason_list">
        <item>行程有变</item>
        <item>航班取消</item>
        <item>等待时间太长</item>
        <item>无法取得联系</item>
    </string-array>
    <string name="travel_complete">行程完成</string>
    <string name="travel_arrive">确认到达</string>
    <string name="travel_order_success">派单成功</string>
    <string name="travel_ordering_success">预约成功</string>
    <string name="travel_go_off">距离您出发时间还有10小时</string>
    <string name="travel_go_out">在您出行前30分钟为您发送司机的信息</string>
    <string name="travel_explain">四川航空免费接送机说明</string>
    <string name="travel_order">确认预约</string>
    <string name="travel_ordering_info">在您出行前一天为您发送司机的信息</string>
    <string name="travel_ordering_info_day">在您乘车前2小时为您发送司机信息</string>
    <string name="travel_wait">等待接驾</string>
    <string name="travel_wait_info">您预约的上车时间为2月2日11:00,请您提前5分钟到达预约地点,做好上车准备</string>
    <string name="travel_pickup">司机正在接您的途中</string>
    <string name="travel_pickup_info">司机预计11:30分到达</string>
    <string name="travel_peer">司机正在接同行乘客</string>
    <string name="travel_already">您已上车</string>
    <string name="travel_already_info">正在计算到达时间...</string>
    <string name="travel_arrvice">行程已结束</string>
    <string name="meet_address">上车地点</string>
    <string name="meet_input_address">请输入下车地址</string>
    <string name="check_details">查看明细</string>
    <string name="back_details">退款明细</string>
    <string name="order_num">订单编号</string>
    <string name="pay_money">付款金额</string>
    <string name="appointment_money">爽约金额</string>
    <string name="back_money">退款金额</string>
    <string name="payment_date">到账时间</string>
    <string name="check_rule">查看取消规则</string>
    <string name="travel_un_cancel">本次行程已失效!</string>
    <string name="travel_reason">失效原因：未支付订单</string>
    <string name="travel_status_registered">预约成功</string>
    <string name="travel_status_inhand">进行中</string>
    <string name="travel_status_arrived">已到达</string>
    <string name="travel_status_cancel">已取消</string>
    <string name="travel_status_booksuccess">派单成功</string>
    <string name="travel_status_NotPaid">未支付</string>
    <string name="travel_status_invalidation">已失效</string>
    <string name="travel_status_wait">等待评价</string>
    <string name="travel_status_completed">已完成</string>
    <string name="travel_status_wait_train">等待接驾</string>
    <string name="travel_status_wait_pickup">等待上车</string>
    <string name="travel_status_wait_come">等待发车</string>
    <string name="travel_go_on_status">请确认您已上车,确认后司机才可发车</string>
    <string name="travel_go_on_wait">等待上车</string>
    <string name="travel_go_on_train">司机已发车</string>
    <string name="travel_go_on_arrive_time">正在计算到达时间...</string>
    <string name="travel_go_on_car">已上车</string>
    <string name="travel_go_on_wait_driver">等待司机发车</string>
    <string name="travel_arrive_info">航班到达后,司机会提前在指定地点等候您,即来即上车,无需担心航班延误或提前到达</string>
    <string name="travel_order_two_dimension">订单二维码 </string>
    <string name="traval_compelete">行程已结束</string>
    <string name="travel_go_on">确认上车</string>
    <string name="travel_get_address">请输入下车地址</string>
    <string name="address_my">我的位置</string>
    <string name="address_locationing">正在努力定位中......</string>
    <string name="travel_reset_price">点击重新获取价格</string>
    <string name="travel_cancel_one">取消</string>
    <string name="travel_confirm_one">确定</string>
    <string name="travel_title_one">标题</string>
    <string name="travel_empty_one">""</string>
    <string name="travel_detail_title">我的行程</string>
    <string name="travel_detail">行程详情</string>
    <string name="travel_wait_payment">等待支付</string>
    <string name="travel_order_failed">订单生成失败,请重新生成订单</string>
    <string name="travel_price_detail">付款明细</string>
    <string name="travel_price_rule">计价规则</string>
    <string name="travel_price_fixed_price">一口价(%d位)</string>
    <string name="travel_price_free">免费乘客(%d位)</string>
    <string name="travel_deduction">优惠抵扣</string>
    <string name="travel_price_payment">支付方式</string>
    <string name="travel_enter_port">取消规则</string>
    <string name="travel_clear_port">取消规则</string>
    <string name="travel_explain_detail">接机说明</string>
    <string name="travel_go_back_time">3-7个工作日</string>
    <string name="travel_payment_lose">支付失效</string>
    <string name="travel_payment_cancel">支付已取消</string>
    <string name="resultcode_alipay_ERROR_8000">正在处理中！</string>
    <string name="resultcode_alipay_ERROR_4000">订单支付失败！</string>
    <string name="resultcode_alipay_ERROR_6001">您取消了本笔订单支付！</string>
    <string name="resultcode_alipay_ERROR_6002">网络连接出错！</string>
    <string name="network_error">无网络连接</string>
    <string name="lost_travel">行程失效</string>
    <string name="airport_seat_lost">需要%d个座位数</string>
    <string name="time_out_four_hours">已超过预约时间,请提前五小时预约</string>
    <string name="start_jump">跳过</string>
    <string name="start_experience">立即体验</string>
    <string name="login_other">您已在其他设备登录</string>
    <string name="fly_four_time">送机需在起飞时间前5小时预约</string>
    <string name="get_num_failed">获取号码失败,请联系客户,电话028-86868686</string>
    <string name="no_data">你暂时没有行程</string>
    <string name="btn_start_travel">开始行程</string>
    <string name="network_error_nomal">网络出错啦,请检查网络</string>
    <string name="reset_data">重新加载</string>
    <string name="code_has_send">验证码已发送</string>
    <string name="submit_order">提交订单</string>
    <string name="china_id_card">目前仅支持大陆居民身份认证</string>
    <string name="identification_success">恭喜您,已认证成功</string>
    <string name="travel_submit">提交</string>
    <string name="travel_free_info_details">输入乘机人证件号,验证成功1名立减40,可叠加</string>
    <string name="travel_free_rule">四川航空减免规则说明</string>
</resources>