<?xml version="1.0" encoding="utf-8"?>

<com.zhy.autolayout.AutoLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<com.ironaviation.traveller.mvp.ui.widget.AutoScrollView
    android:layout_weight="1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.zhy.autolayout.AutoLinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <include
            layout="@layout/include_toolbar"
            ></include>

        <com.zhy.autolayout.AutoRelativeLayout
            android:id="@+id/rl_waiting_payment_money"
            android:layout_width="match_parent"
            android:layout_height="194px"
            android:background="@color/white">

            <View
                android:id="@+id/id_line"
                android:layout_width="1px"
                android:layout_height="1px"
                android:layout_alignParentRight="true"
                android:layout_marginRight="260px"
                android:layout_marginTop="5px"
                android:background="@color/color_transparent"></View>
            <TextView
                android:id="@+id/tv_payment_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="34px"
                android:text="@string/payment_amount"
                android:textColor="@color/word_middle_grey"
                android:textSize="26px"
                />

            <com.ironaviation.traveller.mvp.ui.widget.FontTextView
                android:id="@+id/tv_money"
                style="@style/common_text_content_style"
                android:layout_below="@+id/tv_payment_amount"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/h_fillet2"
                android:text=""
                android:textSize="80px"

                />

            <TextView
                android:id="@+id/tv_unit"
                style="@style/common_text_content_style"
                android:layout_alignBaseline="@+id/tv_money"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/h_fillet"
                android:layout_marginTop="40px"
                android:layout_toRightOf="@+id/tv_money"
                android:text="元"
                android:textColor="@color/word_middle_grey"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:layout_alignParentBottom="true"
                android:background="@color/bg_write_grey"/>
        </com.zhy.autolayout.AutoRelativeLayout>

        <com.zhy.autolayout.AutoRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="88px"
            android:background="@color/white">

            <TextView
                android:id="@+id/tv_money_unit"
                style="@style/common_text_content_style"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="44px"
                android:text="小时"
                android:textSize="26px"
                android:visibility="visible"/>

            <TextView
                android:id="@+id/tv_tt_title"
                style="@style/common_text_content_style"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="23dp"
                android:layout_marginStart="23dp"
                android:text="@string/payment_wait_time"
                android:textSize="30px"/>
        </com.zhy.autolayout.AutoRelativeLayout>

        <com.ironaviation.traveller.mvp.ui.widget.ImageTextImageView
            android:layout_marginTop="@dimen/h_fillet"
            android:id="@+id/ivi_we_chat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:left_logo_iti="@mipmap/ic_we_chat"
            app:text_iti="@string/we_chat_Payment">

        </com.ironaviation.traveller.mvp.ui.widget.ImageTextImageView>

        <com.ironaviation.traveller.mvp.ui.widget.ImageTextImageView
            android:id="@+id/ivi_ali_pay"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:left_logo_iti="@mipmap/ic_ali_pay"
            app:text_iti="@string/ali_pay_payment">

        </com.ironaviation.traveller.mvp.ui.widget.ImageTextImageView>

        <com.ironaviation.traveller.mvp.ui.widget.ImageTextImageView
            android:id="@+id/ivi_union_pay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:left_logo_iti="@mipmap/ic_union"
            app:text_iti="@string/union_payment">
        </com.ironaviation.traveller.mvp.ui.widget.ImageTextImageView>

        <com.ironaviation.traveller.mvp.ui.widget.TextTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/h_fillet"
            app:tt_title="@string/order_information"
            ></com.ironaviation.traveller.mvp.ui.widget.TextTextView>

        <com.ironaviation.traveller.mvp.ui.widget.TextTextView
            android:id="@+id/tt_order_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tt_text_color="@color/word_middle_grey"
            app:tt_title="@string/order_number"
            app:tt_title_color="@color/word_middle_grey"
            ></com.ironaviation.traveller.mvp.ui.widget.TextTextView>

        <com.ironaviation.traveller.mvp.ui.widget.TextTextView
            android:id="@+id/tt_passengers_telephone"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tt_text_color="@color/word_middle_grey"
            app:tt_title="@string/passengers_telephone"
            app:tt_title_color="@color/word_middle_grey"
            ></com.ironaviation.traveller.mvp.ui.widget.TextTextView>


        <View
            android:id="@+id/v_1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/h_fillet"></View>

        <com.ironaviation.traveller.mvp.ui.widget.TextTextView
            android:id="@+id/tt_flight_number"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tt_text_color="@color/word_middle_grey"
            app:tt_title="@string/flight_number"
            app:tt_title_color="@color/word_middle_grey"
            ></com.ironaviation.traveller.mvp.ui.widget.TextTextView>

        <com.ironaviation.traveller.mvp.ui.widget.TextTextView
            android:id="@+id/tt_riding_time"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tt_text_color="@color/word_middle_grey"
            app:tt_title="@string/riding_time"
            app:tt_title_color="@color/word_middle_grey"
            ></com.ironaviation.traveller.mvp.ui.widget.TextTextView>

        <com.ironaviation.traveller.mvp.ui.widget.TextTextView
            android:id="@+id/tt_get_on_the_bus_address"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tt_text_color="@color/word_middle_grey"
            app:tt_title="@string/get_on_the_bus_address"
            app:tt_title_color="@color/word_middle_grey"
            ></com.ironaviation.traveller.mvp.ui.widget.TextTextView>

        <com.ironaviation.traveller.mvp.ui.widget.TextTextView
            android:id="@+id/tt_get_off_the_bus_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tt_text_color="@color/word_middle_grey"
            app:tt_title="@string/get_off_the_bus_address"
            app:tt_title_color="@color/word_middle_grey"
            ></com.ironaviation.traveller.mvp.ui.widget.TextTextView>

        <com.ironaviation.traveller.mvp.ui.widget.TextTextView
            android:id="@+id/tt_need_seats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tt_title="需要2个座位"
            app:tt_title_color="@color/word_middle_grey"
            ></com.ironaviation.traveller.mvp.ui.widget.TextTextView>

    </com.zhy.autolayout.AutoLinearLayout>
</com.ironaviation.traveller.mvp.ui.widget.AutoScrollView>
    <TextView
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="32px"
        android:layout_width="match_parent"
        android:layout_height="96px"
        android:background="@drawable/select_but_champagne"
        android:id="@+id/tv_determine_cancel"
        android:text="@string/go_to_pay"
        ></TextView>
</com.zhy.autolayout.AutoLinearLayout>